# senior-sigan.github.io

./: .editorconfig  .eleventy.js  .gitignore  2012-05-23-dyndns.html  2013-03-31-imagemagick-experiments.html  2013-04-01-imagemagick-experiments-1.html  2013-04-02-imagemagick-experiments-2.html  2013-04-03-imagemagick-experiments-3.html  2013-04-05-imagemagick-experiments-4.html  2013-04-08-imagemagick-experiments-5.html  2013-04-09-imagemagick-experiments-6.html  2013-04-24-imagemagick-experiments-7.html  2013-05-04-imagemagick-experiments-8.html  2013-05-16-imagemagick-experiments-9.html  2014-12-20-audio-termometer.html  2015-05-07-browsers-security.html  2015-09-03-image-as-sound.html  2015-11-01-QRTransmitter.html  2016-01-24-wazzup.html  2016-04-26-multiplayer-game-on-the-ludum-dare-35.html  2017-01-29-android-and-usb-story.html  2017-06-30-why-teach-machine.html  2017-07-01-what-is-ai.html  2017-09-28-ml-pasta.html  2018-01-15-cipher-brain-questions.html  2018-01-23-similar-images-search.html  2018-02-03-new-ux-for-games-with-ml.html  2018-04-26-ludumdare-41.html  2022-04-19-projects.html  CNAME  Gemfile  Makefile  README.md  _config.yml  about.html  app.css  archive.html  backlinks.py  buildcv.html  config.toml  (+25 more)
_data/: metadata.json
_includes/: head.html  metrica.njk  nav.html
_layouts/: note.html
_notes/: 2012-05-23-dyndns.md  201205231200-dyndns.md  2013-03-31-imagemagick-experiments.md  2013-04-01-imagemagick-experiments-1.md  2013-04-02-imagemagick-experiments-2.md  2013-04-03-imagemagick-experiments-3.md  2013-04-05-imagemagick-experiments-4.md  2014-12-20-audio-termometer.md  (+40 more)
(+321 files in other folders)
